Fix SVGs having extra empty space along their widths on Safari
Fixed by removing width property on svg element and removing width: fit-content

--- a/src/components/menu-icon/menu-icon.styles.scss
+++ b/src/components/menu-icon/menu-icon.styles.scss
@@ -1,4 +1,3 @@
 .menu-icon {
     height: 3rem;
-    width: fit-content;
 }
