--- a/src/components/menu/menu.styles.scss
+++ b/src/components/menu/menu.styles.scss
@@ -93,7 +93,6 @@
             border: none;
 
             &-icon {
-                width: fit-content;
                 height: 3rem;
                 padding: 2rem;
             }
@@ -108,7 +107,6 @@
             border: none;
 
             &-icon {
-                width: fit-content;
                 height: 3rem;
                 padding: 2rem;
             }
